--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 <body>
   <header>
     <h1>Amarilla Management</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="services.html">Services</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
   </header>
 
   <main>
