--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <h1>Amarilla Management</h1>
 <nav>
   <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="services.html">Services</a>
-  <a href="contact.html">Contact</a>
+  <a href="payment.html">Payment</a>
+  <a href="privacy.html">Privacy</a>
+  <a href="refund.html">Refund</a>
 </nav>
 
   </header>
