--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amarilla Management</title>
+  <title>Amarilla Management Ltd</title>
   <style>
     :root {
       --primary-blue: #0044cc;
