--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     header {
-      background-color: white;
+      background-color: var(--primary-blue);
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -27,7 +27,7 @@
     }
 
     nav a {
-      color: var(--primary-blue);
+      color: white;
       text-decoration: none;
       margin-left: 1.5rem;
       font-weight: 500;
@@ -52,7 +52,7 @@
 </head>
 <body>
   <header>
-    <h1>Amarilla Management</h1>
+    <h1>Amarilla Management Ltd</h1>
 <nav>
       <a href="index.html">Home</a>
       <a href="privacy.html">Privacy</a>
