--- a/index.html
+++ b/index.html
@@ -5,50 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amarilla Management Ltd</title>
   <style>
-    :root {
-      --primary-blue: #0044cc;
-      --light-blue: #e6f0ff;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: white;
-      color: #333;
-    }
-
-    header {
-      background-color: var(--primary-blue);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ddd;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 1.5rem;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    footer {
-      background-color: var(--primary-blue);
-      color: white;
-      text-align: center;
-      padding: 1.5rem 1rem;
-      margin-top: 4rem;
-    }
-  </style>
+     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
