--- a/privacy.html
+++ b/privacy.html
@@ -15,6 +15,9 @@
       <a href="payment.html">Payment</a>
     </nav>
   </header>
+  <div class="page-image" style="text-align:center; margin: 1rem 0;">
+  <img src="/images/privacy-banner.jpg" alt="Privacy Policy Banner" style="max-width:100%; height:auto; border-radius:8px;">
+</div>
   <main>
 
   <p><strong>Effective Date:</strong> July 2025</p>
