--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
   <div class="page-image" style="text-align:center; margin: 1rem 0;">
-  <img src="/images/privacy-banner.jpg" alt="Privacy Policy Banner" style="max-width:100%; height:auto; border-radius:8px;">
+  <img src="/images/images/refund-policy.webp" alt="Privacy Policy Banner" style="max-width:100%; height:auto; border-radius:8px;">
 </div>
   <main>
 
