--- a/refund.html
+++ b/refund.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Refund Policy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Refund Policy - Amarilla Management Ltd</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Refund Policy</h1>
+    <h1>Amarilla Management Ltd</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="privacy.html">Privacy</a>
@@ -15,11 +16,34 @@
       <a href="payment.html">Payment</a>
     </nav>
   </header>
+
   <main>
-    <p>We offer refunds within 14 days of purchase if you are not satisfied with our service.</p>
+    <h2>Refund Policy</h2>
+    <p>
+      At Amarilla Management Ltd, we provide professional services that are
+      considered delivered and non-reversible once rendered.
+    </p>
+    <p>
+      <strong>No refunds</strong> will be issued for services that have already
+      been provided. By purchasing through our platform, you agree and
+      acknowledge that the service begins immediately and is therefore exempt
+      from the right of withdrawal.
+    </p>
+    <p>
+      If you believe there has been an error or issue with your service, please
+      <a href="mailto:amarillamangement@gmail.com">contact us</a> within 7
+      days of your transaction. We are committed to resolving genuine concerns
+      promptly and fairly.
+    </p>
+    <p>
+      This policy is in accordance with applicable consumer protection laws and
+      Stripe's requirements.
+    </p>
   </main>
+
   <footer>
-    &copy; 2025 Amarilla Management
+    &copy; 2025 Amarilla Management. All rights reserved.
   </footer>
 </body>
 </html>
+
