--- a/payment.html
+++ b/payment.html
@@ -43,7 +43,7 @@
     <br><br>
 
     <!-- Revolut payment button -->
-    <button class="payment-button" onclick="window.open('https://revolut.me/45b7c91f-f9ff-4646-9ba7-b787bbf0c51c', '_blank')">
+    <button class="payment-button" onclick="window.open('https://checkout.revolut.com/pay/45b7c91f-f9ff-4646-9ba7-b787bbf0c51c', '_blank')">
       Pay with Revolut
     </button>
 
