--- a/payment.html
+++ b/payment.html
@@ -44,12 +44,12 @@
     </a>
 
     <!-- Revolut payment button -->
-    <a href="https://checkout.revolut.com/pay/45b7c91f-f9ff-4646-9ba7-b787bbf0c51c" rel="noopener noreferrer" class="payment-button">
+    <a href="https://checkout.revolut.com/pay/45b7c91f-f9ff-4646-9ba7-b787bbf0c51c" target="_blank" rel="noopener noreferrer" class="payment-button">
       Pay EUR with Revolut
     </a>
 
        <!-- Revolut payment button -->
-    <a href="https://checkout.revolut.com/pay/60af627e-c687-4ff8-b234-baf15d56d18e" rel="noopener noreferrer" class="payment-button">
+    <a href="https://checkout.revolut.com/pay/60af627e-c687-4ff8-b234-baf15d56d18e" target="_blank" rel="noopener noreferrer" class="payment-button">
       Pay GBP with Revolut
     </a>
   </main>
