--- a/payment.html
+++ b/payment.html
@@ -40,7 +40,12 @@
 
     <!-- Stripe payment button -->
     <a href="https://buy.stripe.com/dRmaEY9Vag8S4zi4Xy0kE00" target="_blank" rel="noopener noreferrer" class="payment-button">
-      Pay with Stripe
+      Pay EUR with Stripe
+    </a>
+
+        <!-- Stripe payment button -->
+    <a href="https://buy.stripe.com/28EcN6c3ie0K2ra61C0kE01" target="_blank" rel="noopener noreferrer" class="payment-button">
+      Pay GBP with Stripe
     </a>
 
     <!-- Revolut payment button -->
